--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,6 +27,7 @@ linters:
     - prealloc
     - exportloopref
     - nolintlint
+    - shadow
 
 linters-settings:
   errcheck:
@@ -34,7 +35,6 @@ linters-settings:
     check-blank: true
 
   govet:
-    check-shadowing: true
     enable-all: true
 
   gocyclo:
@@ -98,11 +98,12 @@ issues:
 
   max-issues-per-linter: 0
   max-same-issues: 0
+  uniq-by-line: true
 
 output:
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
-  uniq-by-line: true
   sort-results: true
 
