--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,9 +25,9 @@ linters:
     - unparam
     - nakedret
     - prealloc
-    - exportloopref
     - nolintlint
     - shadow
+    - copyloopvar
 
 linters-settings:
   errcheck:
@@ -101,8 +101,6 @@ issues:
   uniq-by-line: true
 
 output:
-  formats:
-    - format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
   sort-results: true
