fix(tests): enhance TestWatcher_FileChange for improved reliability
- Disabled debouncing in TestWatcher_FileChange for more predictable test timing.
- Introduced a channel to signal when the watcher is ready, ensuring proper synchronization.
- Increased timeout for change notification to accommodate slower CI environments, particularly on Linux.
- Added comments to clarify timing considerations across different operating systems.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,13 @@ jobs:
           cache-dependency-path: go.sum
 
       - name: Download dependencies
+        shell: bash
         run: |
           go mod download
           go mod verify
 
       - name: Run tests
+        shell: bash
         run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
 
       - name: Upload coverage
