--- a/.golangci.yml
+++ b/.golangci.yml
@@ -48,7 +48,7 @@ linters:
     - errorlint
     - exptostd
     - fatcontext
-    - forbidigo
+    # - forbidigo
     # - forcetypeassert
     # - funcorder
     # - funlen
@@ -144,6 +144,7 @@ linters:
     - lll
     - ireturn
     - iface
+    - forbidigo
     - godox
     - godot
     - nlreturn
