feat: add Toast and Tooltip components with customizable properties
- Implemented Toast component with variants, positions, and dismissible options.
- Added Tooltip component with trigger and content handling, supporting various positions.
- Both components utilize templ for rendering and include necessary styles and scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,10 @@ vendor/
 dist/
 __debug_bin
 
-# Generated templ files
-*_templ.go
+# Generated templ files (only ignore in non-library dirs)
+# Library packages must commit _templ.go for Go module consumers
+/cmd/**/*_templ.go
+/example/**/*_templ.go
 
 # Test coverage
 *.coverage
